load("@npm//:prettier/package_json.bzl", prettier_bin = "bin")
load("//bzl:rules.bzl", "bazel_lint")
load("//mdx:rules.bzl", "mdx_files")

prettier_bin.prettier_binary(name = "prettier")

mdx_files(
    name = "mdx",
    srcs = glob(
        ["**/*.mdx"],
        allow_empty = True,
    ),
    visibility = ["//:__subpackages__"],
)

bazel_lint(
    name = "bazel_lint",
    srcs = [
        "BUILD.bazel",
        "format.bzl",
        "rules.bzl",
    ],
)
