load("@npm//:prettier/package_json.bzl", prettier_bin = "bin")
load("//bzl:rules.bzl", "bazel_lint")
load("//js:rules.bzl", "js_binary")
load("//mdx:rules.bzl", "mdx_files")
load("//ts:rules.bzl", "ts_project")

prettier_bin.prettier_binary(name = "prettier")

ts_project(
    name = "format_headings_ts",
    srcs = ["format_headings.ts"],
    deps = ["//:node_modules/@types/node"],
)

js_binary(
    name = "format_headings",
    data = [":format_headings_ts"],
    entry_point = "format_headings.js",
    visibility = ["//visibility:public"],
)

mdx_files(
    name = "mdx",
    srcs = glob(
        ["**/*.mdx"],
        allow_empty = True,
    ),
    visibility = ["//:__subpackages__"],
)

bazel_lint(
    name = "bazel_lint",
    srcs = [
        "BUILD.bazel",
        "format.bzl",
        "rules.bzl",
    ],
)

filegroup(
    name = "all_ts_srcs",
    srcs = ["format_headings.ts"],
    visibility = ["//:__subpackages__"],
)
