load("//bzl:rules.bzl", "bazel_lint")
load("//md:rules.bzl", "md_files")
load("//mdx:rules.bzl", "mdx_files")

mdx_files(
    name = "mdx",
    srcs = glob(
        ["**/*.mdx"],
        allow_empty = True,
    ),
    visibility = ["//:__subpackages__"],
)

bazel_lint(
    name = "bazel_lint",
    srcs = [
        "BUILD.bazel",
        "rules.bzl",
    ],
)

md_files(
    name = "md",
    srcs = ["AGENTS.md"],
    visibility = ["//:__subpackages__"],
)
