load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//go:rules.bzl", "go_library")

proto_library(
    name = "proto_proto",
    srcs = [
        "bio.proto",
        "date.proto",
        "text.proto",
        "vcard.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "proto_go_proto",
    importpath = "github.com/zemn-me/monorepo/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":proto_go_proto"],
    importpath = "github.com/zemn-me/monorepo/proto",
    visibility = ["//visibility:public"],
)
