load("//bzl:rules.bzl", "bazel_lint")
load("//py:rules.bzl", "py_library")

"Root for pure python projects."

bazel_lint(
    name = "bazel_lint",
    srcs = [
        "BUILD.bazel",
        "rules.bzl",
    ],
)

py_library(
    name = "py",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
)
