load("//bzl:rules.bzl", "bazel_lint")

package(default_visibility = ["//:__subpackages__"])

alias(
    name = "rustfmt",
    actual = "//bin/host/rs:rustfmt",
)

alias(
    name = "fmt",
    actual = ":rustfmt",
)

alias(
    name = "gen_rust_project",
    actual = "@rules_rust//tools/rust_analyzer:gen_rust_project",
)

bazel_lint(name = "bazel_lint")
