load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("//bzl:rules.bzl", "bazel_lint")
load("//py:rules.bzl", "py_test")
load("//ts:rules.bzl", "ts_project")

go_test(
    name = "go_basic_test",
    srcs = ["go_basic_test.go"],
)

py_test(
    name = "python_basic_test",
    srcs = ["python_basic_test.py"],
)

go_test(
    name = "testing_test",
    srcs = ["go_basic_test.go"],
)

bazel_lint(name = "bazel_lint")

ts_project(
    name = "typescript_basic_test",
    srcs = ["typescript_basic_test.ts"],
)
