load("//bzl:rules.bzl", "bazel_lint")
load("//ts:rules.bzl", "jest_test", "ts_project")

package(default_visibility = ["//:__subpackages__"])

ts_project(
    name = "ts",
    srcs = [
        "NewType.ts",
        "errors.ts",
        "guard.ts",
        "guards.ts",
        "json.ts",
        "lens.ts",
        "result.ts",
        "result_types.ts",
        "safely.ts",
        "tree.ts",
        "tuple.ts",
        "typeadd.ts",
        "util.ts",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:node_modules/@types/node",
        "//ts/result",
    ],
)

ts_project(
    name = "lens_test",
    srcs = ["lens_test.ts"],
    deps = [
        ":ts",
        "//:node_modules/@jest/globals",
        "//:node_modules/@types/node",
    ],
)

jest_test(
    name = "lens_tests",
    srcs = [
        "lens_test.js",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        ":ts_tests",
    ],
)

bazel_lint(
    name = "bazel_lint",
    srcs = [
        "BUILD.bazel",
        "rules.bzl",
    ],
)

filegroup(
    name = "all_ts_srcs",
    srcs = [
        "NewType.ts",
        "errors.ts",
        "guard.ts",
        "guards.ts",
        "json.ts",
        "lens.ts",
        "lens_test.ts",
        "result.ts",
        "result_types.ts",
        "safely.ts",
        "tree.ts",
        "tuple.ts",
        "typeadd.ts",
        "util.ts",
    ],
    visibility = ["//:__subpackages__"],
)

ts_project(
    name = "ts_tests",
    srcs = ["lens_test.ts"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":ts",
        "//:node_modules/@jest/globals",
        "//:node_modules/@types/node",
    ],
)
