sh_binary(
    name = "fetch_shas",
    srcs = ["fetch_shas.sh"],
    tags = ["manual"],
)

filegroup(
    name = "distro",
    srcs = [
        "BUILD.bazel",
        "fetch_shas.sh",
        "//util/dir_zipper:distro",
        "//util/import:distro",
        "//util/label:distro",
        "//util/process_wrapper:distro",
    ],
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "collect_coverage",
    srcs = ["collect_coverage.sh"],
    visibility = ["//visibility:public"],
)
