load("//bzl:rules.bzl", "bazel_lint")
load("//md:rules.bzl", "md_files")
load("//yml:test.bzl", "yaml_lint_test")

exports_files(["presubmit.yml"])

yaml_lint_test(
    name = "validation",
)

bazel_lint(
    name = "bazel_lint",
    srcs = ["BUILD.bazel"],
)

md_files(
    name = "github_workflows",
    srcs = ["README.md"],
    visibility = ["//:__subpackages__"],
)
