load("//bzl:rules.bzl", "bazel_lint")
load("//py:rules.bzl", "py_binary", "py_library")

py_binary(
    name = "scm_conf",
    srcs = ["scm_conf.py"],
)

py_library(
    name = "prep",
    srcs = ["scm_conf.py"],
    visibility = ["//:__subpackages__"],
)

bazel_lint(
    name = "bazel_lint",
    srcs = ["BUILD.bazel"],
)
