sh_test(
	name = "test_tools_run",
	srcs = [ "test_tools_run.sh" ],
	deps = [
		"@bazel_tools//tools/bash/runfiles",
	],
	data = [
		"//sh/bin:go",
		"//sh/bin:gopackagesdriver",
		"//sh/bin:goimports",
		"@co_honnef_go_tools//cmd/staticcheck",
		"//sh/bin:dlv"
	],
	env = {
		"GO_BINARY": "$(rlocationpath //sh/bin:go)",
		"GOPACKAGESDRIVER_BINARY": "$(rlocationpath //sh/bin:gopackagesdriver)",
		"GOIMPORTS_BINARY": "$(rlocationpath //sh/bin:goimports)",
		"STATICCHECK_BINARY": "$(rlocationpath @co_honnef_go_tools//cmd/staticcheck)",
		"DLV_BINARY": "$(rlocationpath //sh/bin:dlv)"
	}
)
