[raze]
genmode = "Remote"
workspace_path = "//bindgen/raze"

[dependencies]
bindgen = "0.54.0"

[raze.crates.bindgen.'0.54.0']
gen_buildrs = true
extra_aliased_targets = ["cargo_bin_bindgen"]

[raze.crates.clang-sys.'0.29.3']
gen_buildrs = true

[raze.crates.libloading.'0.5.2']
additional_deps = [":global_static"]
additional_build_file = "libloading-global-static.BUILD"

[raze.crates.log.'0.4.8']
additional_flags = [
    "--cfg=atomic_cas",
]

[package]
name = "fake_lib"
version = "0.0.1"

[lib]
path = "fake_lib.rs"
