load("@npm//:@biomejs/biome/package_json.bzl", biome_bin = "bin")
load("//bzl:rules.bzl", "bazel_lint")

package(default_visibility = ["//:__subpackages__"])

biome_bin.biome_binary(name = "biome")

bazel_lint(
    name = "bazel_lint",
    srcs = [
        "BUILD.bazel",
        "biome.bzl",
        "linters.bzl",
    ],
)
